--- a/NotePad/NotePad/NotePad.vcxproj
+++ b/NotePad/NotePad/NotePad.vcxproj
@@ -20,8 +20,8 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
-    <ProjectGuid>{01745293-5483-4569-8106-2F898405694C}</ProjectGuid>
-    <RootNamespace>NotepadAulas</RootNamespace>
+    <ProjectGuid>{9155205C-EC80-479D-86C1-0E19C170A651}</ProjectGuid>
+    <RootNamespace>NotePad</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -123,7 +123,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Source.cpp" />
+    <ClCompile Include="NotePad.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
