--- a/Projeto Calendario/Projeto Calendario/Projeto Calendario.vcxproj.filters
+++ b/Projeto Calendario/Projeto Calendario/Projeto Calendario.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Source.cpp">
+    <ClCompile Include="T1_N47521_N47133.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
